--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^7.0.0",
+    "css-loader": "^6.5.1",
     "daisyui": "^1.25.4",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
